k3s/cluster/infra/auth/admin/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: admin-auth
  namespace: traefik-system
spec:
  forwardAuth:
    address: http://admin-auth-oauth2-proxy.traefik-system.svc.cluster.local/
    trustForwardHeader: true
    authResponseHeaders:
      - X-Auth-Request-User
      - X-Auth-Request-Email
      - X-Auth-Request-Groups
      - X-Forwarded-User
      - X-Forwarded-Email
      - X-Forwarded-Groups
